--- a/css/components/user-component.css
+++ b/css/components/user-component.css
@@ -40,6 +40,18 @@
   color: rgba(0, 0, 0, 0.5);
 }
 
+.user-component__subtitle i {
+  color: rgba(255, 0, 0, 0.6);
+}
+
 .user-component__column:last-child {
-  color: rgba(0, 0, 0, 0.5);
+  color: rgba(0, 0, 0, 0.4);
+  display: flex;
+  flex-direction: column;
+  align-items: end;
+}
+
+.user-component__time {
+  display: block;
+  margin-bottom: 10px;
 }
